[package]
name = "liebert-mpx"
edition = "2018"
version = "0.1.0"
description = "API for Liebert MPX PDUs"
authors = ["Sebastian Reichel <sre@mainframe.io>"]
license = "ISC"
repository = "https://github.com/sre/rust-liebert-mpx"
readme = "README.md"
keywords = ["liebert", "mpx", "pdu"]
categories = ["api-bindings", "network-programming", "parser-implementations"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
html_parser = "0.7"
